# ray-tracing

./: CMakeLists.txt
src/: Camera.cpp  Camera.h  Hittable.cpp  Hittable.h  Ray.cpp  Ray.h  Sphere.cpp  Sphere.h  Vector3.cpp  Vector3.h  World.cpp  World.h  main.cpp  stb_image_write.h  utils.cpp  utils.h
src/Materials/: Lambert.cpp  Lambert.h  Material.cpp  Material.h  Metal.cpp  Metal.h
